--- a/index.css
+++ b/index.css
@@ -1,3 +1,80 @@
-#heading{
-    color:gold
+.header{
+    display: flex;
+    box-sizing: border-box;
+    justify-content: space-between;
+    border: 1px solid black;
+    box-shadow: 0 2px 100px 0 rgba(0, 0, 0, 0.1);
+
+}
+.logo-container img {
+    width:100px;
+    height:100px;
+    background-color: gold;
+    margin-top: 1px;
+}
+
+.navitems{
+    margin-right: 50px;
+}
+
+.navitems ul{
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+    padding-left: 20px;
+    margin-top: 40px;
+   
+    list-style: none;   
+}
+.navitems ul li{
+    cursor: pointer;
+   
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.search{
+    padding: 10px;
+}
+.res-card{
+   
+    width: 200px;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+   
+}
+.res-card img{
+    height: 180px;
+    width: 180px;
+    margin-left: 10px;
+    margin-top: 10px;
+    box-shadow: 0 2px 100px 0 rgba(0, 0, 0, 0.1);
+
+}
+.card-title{
+    margin-left: 10px;
+    margin-top: 5px;
+   
+}
+
+  
+.res-card:hover {
+    border: 1px solid black;
+    transform: scale(1.05);
+}
+
+.cue{
+    margin-top: -10px;
+    margin-left: 10px;
+}
+
+.rating{
+    margin-top: -15px; 
+    margin-left: 10px;  
 }
